fix: error resolved

--- a/src/pages/activities/[...page].astro
+++ b/src/pages/activities/[...page].astro
@@ -3,7 +3,7 @@ import type { GetStaticPathsOptions, Page } from 'astro';
 import { type CollectionEntry, getCollection } from 'astro:content';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import Pagination from '../../components/Pagination.astro';
-import PostPreview from '../../components/PostPreview.astro';
+import ActivPreview from '../../components/ActivPreview.astro';
 import Subscribe from '../../components/Subscribe.astro';
 import siteConfig from '../../data/site-config';
 import { sortItemsByDateDesc } from '../../utils/data-utils';
@@ -26,7 +26,7 @@ const activities = page.data;
         showHeader={false}
 >
     <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">Activities</h1>
-    {activities.map((post) => <PostPreview post={post} class="mb-10 sm:mb-12" />)}
+    {activities.map((post) => <ActivPreview post={post} class="mb-10 sm:mb-12" />)}
     <Pagination page={page} class="my-16 sm:my-24" />
     <Subscribe class="my-16 sm:my-24" />
 </BaseLayout>
