--- a/src/pages/activities/[slug].astro
+++ b/src/pages/activities/[slug].astro
@@ -3,7 +3,7 @@ import { type CollectionEntry, getCollection } from 'astro:content';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import Button from '../../components/Button.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
-import PostPreview from '../../components/PostPreview.astro';
+import ActivPreview from '../../components/ActivPreview.astro';
 import Subscribe from '../../components/Subscribe.astro';
 import { sortItemsByDateDesc } from '../../utils/data-utils';
 import { slugify } from '../../utils/common-utils';
@@ -69,8 +69,8 @@ const { Content } = await post.render();
         (prevPost || nextPost) && (
                     <div class="my-16 sm:my-24">
                         <h2 class="mb-12 text-xl font-serif italic sm:mb-16 sm:text-2xl">Read Next</h2>
-                        {nextPost && <PostPreview post={nextPost} class="mb-10 sm:mb-12" headingLevel="h3" />}
-                        {prevPost && <PostPreview post={prevPost} class="mb-10 sm:mb-12" headingLevel="h3" />}
+                        {nextPost && <ActivPreview post={nextPost} class="mb-10 sm:mb-12" headingLevel="h3" />}
+                        {prevPost && <ActivPreview post={prevPost} class="mb-10 sm:mb-12" headingLevel="h3" />}
                     </div>
         )
     }
